# MusicTimeCalculator

./: .gitignore  .gitignore.txt  LICENSE.txt  README.md  ReadMe.md  TimeCalc.icns  TimeCalc.py  TimeCalc.spec  pyproject.toml
.github/workflows/: build-macos.yml
Make Icon/: openai-gpt-image-1.5 | Run with an API on Replicate.webloc
Make Icon/TimeCalc.iconset/: news.ycombinator.com:item?id=36495008.webloc
retired stuff/: xsetup.py
retired stuff/xdist/timecalc.app/Contents/: Info.plist
retired stuff/xdist/timecalc.app/Contents/Frameworks/: libb2.1.dylib  libintl.8.dylib  libtcl9.0.dylib  libtcl9tk9.0.dylib  libz.1.3.1.dylib
retired stuff/xdist/timecalc.app/Contents/MacOS/: python  timecalc
retired stuff/xdist/timecalc.app/Contents/Resources/: __boot__.py
retired stuff/xdist/timecalc.app/Contents/Resources/include/python3.12/: pyconfig.h
retired stuff/xdist/timecalc.app/Contents/Resources/lib/python3.12/config-3.12-darwin/: Makefile
retired stuff/xdist/timecalc.app/Contents/_CodeSignature/: CodeResources
tests/: test_timecalc.py
timecalc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
