[project]
name = "timecalc"
version = "1.1.0"
description = "Music programming time arithmetic tool with history logging."
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
# Uncomment these so uv and PyInstaller can find them
dependencies = [
    "customtkinter>=5.2.0",
    "darkdetect>=0.8.0",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
